--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "axios-extensions": "^3.1.3",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
-    "graphql": "^15.5.0",
     "postcss": "^7.0.35",
+    "qrious": "^4.0.2",
+    "sass-loader": "^11.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
-    "vue-apollo": "^3.0.5",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
   },
